2008-08-02  Chong Yidong  <cyd@stupidchicken.com>

	* vm-limit.c (check_memory_limits): Don't use getrlimit on cygwin.
	Don't use uninitialized pointer variable when using getrlimit.

2008-08-02  Jason Rumney  <jasonr@gnu.org>

        * w32font.c (compute_metrics): Don't mess with glyph_idx setting here.

2008-08-02  Eli Zaretskii  <eliz@gnu.org>

	* alloc.c (NSTATICS): Bump to 0x640.

	* s/gnu-linux.h (HAVE_PROCFS, LISTPROC, PROCATTR): New defines.

	* lisp.h: Add prototype for directory_files_internal.

	* process.c (Fsystem_processes_list, Fsystem_process_attributes):
	New functions.
	(syms_of_process): Defsubr them.  Add initializations for various
	Q* symbols used in procfs_system_process_attributes.
	(procfs_list_system_processes, procfs_system_process_attributes)
	[HAVE_PROCFS]: New functions.
	(time_from_jiffies, ltime_from_jiffies, get_up_time, procfs_ttyname)
	(procfs_get_total_memory): New functions.

2008-08-01  Juanma Barranquero  <lekktu@gmail.com>

	* xfaces.c (Fx_load_color_file): Fix previous change;
	it is #ifdef WINDOWSNT, not WINDOWS_NT.

2008-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_read_message): Handle D-Bus error messages.

2008-08-01  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.h (NSInteger, NSUInteger): Add defines for non-Leopard.

2008-08-01  Chong Yidong  <cyd@stupidchicken.com>

	* nsfns.m (ns_frame_parm_handlers): Add empty entry for x_set_alpha.

	* nsterm.m (EmacsApp -application:openFiles:): GNUStep does not
	define NSApplicationDelegateReplySuccess.
	(EmacsView -converstationIdentifier): Use long instead of
	NSInteger for GNUStep, since it doesn't have NSInteger.

	* xmenu.c: Revert last change.

	* keyboard.h: Fix last change.

2008-08-01  Juanma Barranquero  <lekktu@gmail.com>

	* xfaces.c (x-load-color-file): Use RGB() instead of manually shifting
	on Windows.

2008-08-01  Adrian Robert  <Adrian.B.Robert@gmail.com>

	Warning clearing and clean-up in NS port.